--- a/app/src/main/res/drawable/bottom_sheet_custom.xml
+++ b/app/src/main/res/drawable/bottom_sheet_custom.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
-    <solid android:color="@android:color/white"></solid>
+    <solid android:color="@color/cor_de_fundo_login"></solid>
     <corners android:topLeftRadius="20dp" android:topRightRadius="20dp"
-        android:bottomLeftRadius="0.1dp" android:bottomRightRadius="0.1dp"/>    <stroke android:width="1dp"></stroke>
+        android:bottomLeftRadius="0.1dp" android:bottomRightRadius="0.1dp"/>
+    <stroke android:width="1dp"></stroke>
 
 </shape>
