--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -42,6 +42,7 @@
             android:padding="20dp"
             >
             <TextView
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Nome"
@@ -52,6 +53,7 @@
                 android:layout_height="wrap_content"
                 />
             <EditText
+                android:id="@+id/nameUser"
                 android:layout_width="300dp"
                 android:layout_height="match_parent"
                 android:background="@drawable/fundo_caixa_texto"
@@ -67,6 +69,7 @@
             android:padding="20dp"
             >
             <TextView
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Email:"
@@ -78,6 +81,7 @@
                 android:text="   "
                 />
             <EditText
+                android:id="@+id/emailUser"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/fundo_caixa_texto"
@@ -93,6 +97,7 @@
             android:padding="20dp"
             >
             <TextView
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Telefone:"
@@ -104,6 +109,7 @@
                 android:text="  "
                 />
             <EditText
+                android:id="@+id/phoneUser"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/fundo_caixa_texto"
@@ -130,6 +136,7 @@
                 android:text="  "
                 />
             <EditText
+                android:id="@+id/passwordUser"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/fundo_caixa_texto"
@@ -151,6 +158,7 @@
             android:paddingBottom="10dp"
             >
             <Button
+                android:id="@+id/btnSignUp"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
