--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,13 +1,11 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
 
-    <!-- Base application theme. -->
     <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="android:windowBackground">@android:color/white</item>
+        <item name="android:colorPrimary">@color/colorGreen</item>
+        <item name="android:colorPrimaryDark">@color/colorGreen</item>
         <item name="android:windowActionBar">true</item>
-        <item name="colorPrimaryDark">@color/colorGreen</item>
-        <item name="colorPrimary">@color/colorGreen</item>
     </style>
-
-
 </resources>
